Predict the location and division number

--- a/Prediction/website/templates/index.html
+++ b/Prediction/website/templates/index.html
@@ -81,6 +81,7 @@
         <div class="result">
             {% if pred_value != 0 %}
             <p>Grama Niladhari Division : {{pred_value}}</p>
+            <p>Elephant Located Area : {{location_name}}</p>
             {% endif %}
         </div>
     </div>
