--- a/Prediction/website/static/style.css
+++ b/Prediction/website/static/style.css
@@ -1,106 +1,101 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap');
+
 *{
+    font-family: 'Poppins', sans-serif;
     margin: 0;
     padding: 0;
+    scroll-behavior: smooth;
     box-sizing: border-box;
-    font-family: Arial, Helvetica, sans-serif;
 }
 body{
-    background: black;
-    padding: 0 10px;
-}
-.wrapper{
-    max-width: 500px;
     width: 100%;
-    background: #fff;
-    margin: 20px auto;
-    box-shadow: 2px 2px 4px rgba(0,0,0,0.125);
-    padding: 30px;
-}
-  
-.wrapper .title{
-    font-size: 24px;
-    font-weight: 700;
-    margin-bottom: 25px;
-    color: black;
-    text-transform: uppercase;
-    text-align: center;
-}
-  
-.wrapper .form{
-    width: 100%;
-}
-  
-.wrapper .form .inputfield{
-    margin-bottom: 15px;
+    height: 100vh;
     display: flex;
-    align-items: center;
-}
-  
-.wrapper .form .inputfield label{
-     width: 200px;
-     color: black;
-     margin-right: 10px;
-    font-size: 14px;
-}
-
-.check{
-    margin-bottom: 15px;
-    display: flex;
-    justify-content: space-around;
-}
-
-.check label{
-    padding: 0px 10px 0px 0px;
-}
-
-.wrapper .form .inputfield .input{
-    width: 100%;
-    outline: none;
-    border: 1px solid #d5dbd9;
-    font-size: 15px;
-    padding: 8px 10px;
-    border-radius: 3px;
-}
-
-.wrapper .form .inputfield .custom_select{
-    position: relative;
-    width: 100%;
-    height: 37px;
-}
-  
-.wrapper .form .inputfield .custom_select:before{
-    position: absolute;
-    top: 12px;
-    right: 10px;
-}
-  
-.wrapper .form .inputfield .custom_select select{
-    width: 100%;
-    height: 100%;
-    border: 0px;
-    padding: 8px 10px;
-    font-size: 15px;
-    border: 1px solid #d5dbd9;
-    border-radius: 3px;
-}
-
-.wrapper .form .inputfield .btn{
-    width: 100%;
-    padding: 8px 10px;
-    font-size: 15px; 
-    border: 0px;
-    background:  black;
+    flex-direction: column;
+    justify-content: center;
     color: #fff;
-    cursor: pointer;
-    border-radius: 3px;
-    outline: none;
+    background: #2c2f48;
 }
-  
-.result p{
+.contact-container{
+    max-width: 960px;
+    margin: auto;
+    width: 100%;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 1.5rem;
+    background: #363953;
+    box-shadow: 0 0 1rem hsla(0 0 0 / 16%);
+    overflow: hidden;
+}
+.form-container{
+    padding: 20px;
+}
+.form-container h3{
+    font-size: 2rem;
+    font-weight: 600;
+    margin-bottom: 0.5rem;
+}
+.contact-form{
+    display: grid;
+    row-gap: 0.5rem;
+}
+.contact-form input,
+.contact-form select{
+    width: 100%;
+    border: none;
+    outline: none;
+    background: #2c2f48;
+    padding: 10px;
+    font-size: 0.9rem;
+    color: #fff;
+    border-radius: 0.4rem;
+}
+.contact-form .send-button{
+    border: none;
+    outline: none;
+    background: #7A9D54;
+    font-size: 1rem;
+    font-weight: 500;
+    text-transform: uppercase;
+    cursor: pointer;
+    margin-top: 0.5rem;
+}
+.contact-form .send-button:hover{
+    background: #9EB384;
+    transition: 0.3s all linear;
+}
+.map iframe{
+    width: 100%;
+    height: 100% ;
+}
+.toast {
+    position: fixed;
+    top: 0;
+    left: 50%;
+    transform: translateX(-50%);
+    background-color: #f44336;
+    color: white;
+    padding: 16px;
+    z-index: 1000;
+    display: none;
+    width: 100%;
     text-align: center;
-    color: blue;
-    font-size: 18px;
-    font-weight: bold;
 }
 
-  
+@media (max-width: 964px) {
+    .contact-container{
+        margin: 0 auto;
+        width: 90%;
+    }
+}
+
+@media (max-width: 700px) {
+    .contact-container{
+        grid-template-columns: 1fr;
+        gap: 1rem;
+        margin-top: 20rem !important;
+    }
+    .map iframe{
+        height: 400px;
+    }
+}
