Routing & Log Out & Home Completed

--- a/Web Application/ELPS/ELPS.Api/ClientApp/src/app/views/pages/login/login.component.html
+++ b/Web Application/ELPS/ELPS.Api/ClientApp/src/app/views/pages/login/login.component.html
@@ -35,4 +35,9 @@
             </div>
         </div>
     </div>
+    <div class="row">
+        <div class="col mt-3">
+            <span class="me-2">Don't have Account?</span><a routerLink="/register">REGISTER</a>
+        </div>
+    </div>
 </form>
