--- a/Web Application/ELPS/ELPS.Api/ClientApp/src/app/views/pages/register/register.component.html
+++ b/Web Application/ELPS/ELPS.Api/ClientApp/src/app/views/pages/register/register.component.html
@@ -130,4 +130,9 @@
             </div>
         </div>
     </div>
+    <div class="row">
+        <div class="col mt-3">
+            <span class="me-2">Already have Account?</span><a routerLink="/login">LOGIN</a>
+        </div>
+    </div>
 </form>
