--- a/Web Application/ELPS/ELPS.Api/ClientApp/src/app/views/pages/register/register.component.html
+++ b/Web Application/ELPS/ELPS.Api/ClientApp/src/app/views/pages/register/register.component.html
@@ -1,3 +1,4 @@
+<div class="container">
 <p class="text-center fs-3" [ngClass]="isAccountCreated? 'text-success pb-1' : 'text-danger pb-1'">
     {{displayMsg}}
 </p>
@@ -136,3 +137,4 @@
         </div>
     </div>
 </form>
+</div>
