--- a/Web Application/ELPS/ELPS.Api/ClientApp/src/app/app.component.html
+++ b/Web Application/ELPS/ELPS.Api/ClientApp/src/app/app.component.html
@@ -1,3 +1,8 @@
-<div class="container">
-  <router-outlet></router-outlet>
-</div>
+<!-- <app-login></app-login> -->
+<router-outlet></router-outlet>
+    <app-sidenav (onToggleSideNav)="onToggleSideNav($event)"></app-sidenav>
+    <app-body
+        [collapsed]="isSideNavCollapsed"
+        [screenWidth]="screenWidth"
+    ></app-body>
+
