--- a/Web Application/ELPS/ELPS.Api/ClientApp/src/app/views/pages/login/login.component.html
+++ b/Web Application/ELPS/ELPS.Api/ClientApp/src/app/views/pages/login/login.component.html
@@ -1,3 +1,4 @@
+<div class="container">
 <form action="" class="border p-3 rounded-3" [formGroup]="loginForm" (ngSubmit)="loginSubmited()">
     <div class="row g-0">
         <div class="col text-center p-2 mb-3 bg-light">
@@ -41,3 +42,4 @@
         </div>
     </div>
 </form>
+</div>
