--- a/Web Application/ELPS/ELPS.Api/ClientApp/src/app/views/pages/page-not-found/page-not-found.component.css
+++ b/Web Application/ELPS/ELPS.Api/ClientApp/src/app/views/pages/page-not-found/page-not-found.component.css
@@ -4,6 +4,13 @@
 
 .page_404  img{ width:100%;}
 
+.container{
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
 .four_zero_four_bg{
  
  background-image: url(https://cdn.dribbble.com/users/285475/screenshots/2083086/dribbble_1.gif);
