--- a/Web Application/ELPS/ELPS.Api/ClientApp/src/app/views/pages/register/register.component.css
+++ b/Web Application/ELPS/ELPS.Api/ClientApp/src/app/views/pages/register/register.component.css
@@ -1,3 +1,10 @@
+.container{
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
 form{
     width: 500px;
+    margin-bottom: 100px;
 }
