--- a/Web Application/ELPS/ELPS.Api/ClientApp/src/app/views/pages/login/login.component.html
+++ b/Web Application/ELPS/ELPS.Api/ClientApp/src/app/views/pages/login/login.component.html
@@ -32,13 +32,13 @@
     <div class="row">
         <div class="col-6 offset-3">
             <div class="d-grid">
-                <button type="submit" [disabled]="loginForm.invalid" class="btn btn-primary">LOGIN</button>
+                <button type="submit" [disabled]="loginForm.invalid" class="btn btn-dark">LOGIN</button>
             </div>
         </div>
     </div>
     <div class="row">
         <div class="col mt-3">
-            <span class="me-2">Don't have Account?</span><a routerLink="/register">REGISTER</a>
+            <span class="me-2">Don't have Account?</span><a routerLink="/register">Register Here</a>
         </div>
     </div>
 </form>
