--- a/Web Application/ELPS/ELPS.Api/ClientApp/src/app/views/pages/register/register.component.html
+++ b/Web Application/ELPS/ELPS.Api/ClientApp/src/app/views/pages/register/register.component.html
@@ -127,13 +127,13 @@
     <div class="row">
         <div class="col-6 offset-3">
             <div class="d-grid">
-                <button type="submit" [disabled]="registerForm.invalid" class="btn btn-primary">Submit</button>
+                <button type="submit" [disabled]="registerForm.invalid" class="btn btn-dark">Submit</button>
             </div>
         </div>
     </div>
     <div class="row">
         <div class="col mt-3">
-            <span class="me-2">Already have Account?</span><a routerLink="/login">LOGIN</a>
+            <span class="me-2">Already have Account?</span><a routerLink="/login">Login Here</a>
         </div>
     </div>
 </form>
