--- a/Web Application/ELPS/ELPS.Api/ClientApp/src/app/views/pages/dashboard/elephant-register/elephant-register.component.html
+++ b/Web Application/ELPS/ELPS.Api/ClientApp/src/app/views/pages/dashboard/elephant-register/elephant-register.component.html
@@ -1,1 +1,34 @@
-<p>elephant-register works!</p>
+<h1>Elephant Register</h1>
+<div class="card">
+    <div class="card-head">Register</div>
+    <div class="card-body">
+        <form action="">
+            <div class="row">
+                <div class="col mb-3">
+                    <label for="name" class="form-label">Name</label>
+                    <input type="text" class="form-control" id="name">
+                </div>
+                <div class="col mb-3">
+                    <label for="dob" class="form-label">Date of Birth</label>
+                    <input type="date" class="form-control" id="dob">
+                </div>
+            </div>
+            <div class="row">
+                <div class="col mb-3">
+                    <label for="location" class="form-label">Location</label>
+                    <input type="text" class="form-control" id="location">
+                </div>
+                <div class="col mb-3">
+                    <label for="remark" class="form-label">Remark</label>
+                    <textarea class="form-control" id="remark"></textarea>
+                </div>
+            </div>
+
+            <hr>
+            <button type="button" style="float: right; color: white; font-size: 13px; font-weight: 600;" class="btn btn-success pull-right">
+                Submit
+            </button>
+        </form>
+    </div>
+</div>
+
