--- a/Web Application/ELPS/ELPS.Api/ClientApp/src/app/views/pages/dashboard/view-erecord/view-erecord.component.html
+++ b/Web Application/ELPS/ELPS.Api/ClientApp/src/app/views/pages/dashboard/view-erecord/view-erecord.component.html
@@ -1,6 +1,10 @@
 <h1>Elephants Records List</h1>
 <div class="card">
-    <div class="card-head">Added Records</div>
+    <div class="card-head">Added Records
+        <button type="button" (click)="exportToCSV()" style="float: right; color: white; font-size: 13px; font-weight: 600;" class="btn btn-success pull-right">
+            Export CSV
+        </button>
+    </div>
     <div class="card-body">
         <table style="width: 100%;border-width: thin;" >
             <th style="border-width: thin;font-size: 12px;" class="text-center">Elephant Name</th>
@@ -18,9 +22,5 @@
               <td style="border-width: thin;word-wrap: break-word; font-size: 12px;">{{record.location}}</td>
             </tr>
         </table>
-        <hr>
-        <button type="button" (click)="exportToCSV()" style="float: right; color: white; font-size: 13px; font-weight: 600;" class="btn btn-success pull-right">
-            Export CSV
-        </button>
     </div>
 </div>
