--- a/Web Application/ELPS/ELPS.Api/ClientApp/src/app/views/pages/dashboard/elephant-register/elephant-register.component.html
+++ b/Web Application/ELPS/ELPS.Api/ClientApp/src/app/views/pages/dashboard/elephant-register/elephant-register.component.html
@@ -5,22 +5,43 @@
         <form [formGroup]="registerForm" (ngSubmit)="registerSubmit()" action="">
             <div class="row">
                 <div class="col mb-3">
-                    <label for="name" class="form-label">Name</label>
-                    <input type="text" class="form-control" id="name" formControlName="name">
+                    <label for="name" class="form-label">Elephant Name</label>
+                    <input type="text" placeholder="Name of Elephant" class="form-control" id="name" formControlName="name">
+                    <div class="form-text text-danger" *ngIf="Name.errors?.['required'] && (Name.touched || Name.dirty)">
+                        Elephant Name is Required.
+                    </div>
+                    <div class="form-text text-danger" *ngIf="Name.errors?.['minlength'] && (Name.touched || Name.dirty)">
+                        Name is too Short.
+                    </div>
+                    <div class="form-text text-danger" *ngIf="Name.errors?.['pattern'] && (Name.touched || Name.dirty)">
+                        Name can not type Numbers.
+                    </div>
                 </div>
                 <div class="col mb-3">
                     <label for="dob" class="form-label">Date of Birth</label>
                     <input type="date" class="form-control" id="dob" formControlName="dob">
+                    <div class="form-text text-danger" *ngIf="Dob.errors?.['required'] && (Dob.touched || Dob.dirty)">
+                        Date of Birth is Required.
+                    </div>
                 </div>
             </div>
             <div class="row">
                 <div class="col mb-3">
                     <label for="location" class="form-label">Location</label>
-                    <input type="text" class="form-control" id="location" formControlName="location">
+                    <input type="text" placeholder="605 - 657" class="form-control" id="location" formControlName="location">
+                    <div class="form-text text-danger" *ngIf="Location.errors?.['required'] && (Location.touched || Location.dirty)">
+                        Area is Required.
+                    </div>
+                    <div class="form-text text-danger" *ngIf="Location.errors?.['pattern'] && (Location.touched || Location.dirty)">
+                        Not Valid Area.
+                    </div>
                 </div>
                 <div class="col mb-3">
                     <label for="remark" class="form-label">Remark</label>
-                    <textarea class="form-control" id="remark" formControlName="remark"></textarea>
+                    <textarea placeholder="Special note" class="form-control" id="remark" formControlName="remark"></textarea>
+                    <div class="form-text text-danger" *ngIf="Remark.errors?.['required'] && (Remark.touched || Remark.dirty)">
+                        Remark is Required.
+                    </div>
                 </div>
             </div>
 
@@ -28,7 +49,7 @@
             <button type="submit" [disabled]="registerForm.invalid" style="float: right; margin-right: 5px; color: white; font-size: 13px; font-weight: 600;" class="btn btn-success pull-right">
                 Submit
             </button>
-            <button type="button" [disabled]="registerForm.invalid" (click)="search()" style="float: left; margin-right: 5px; color: white; font-size: 13px; font-weight: 600;" class="btn btn-dark">
+            <button type="button" [disabled]="!registerForm.get('name')?.value" (click)="search()" style="float: left; margin-right: 5px; color: white; font-size: 13px; font-weight: 600;" class="btn btn-dark">
                 Search
             </button>
             <button type="button" [disabled]="registerForm.invalid" (click)="editElephant()" style="float: left; margin-right: 5px; color: white; font-size: 13px; font-weight: 600;" class="btn btn-dark">
