--- a/Web Application/ELPS/ELPS.Api/ClientApp/src/app/views/pages/dashboard/dashboard/dashboard.component.html
+++ b/Web Application/ELPS/ELPS.Api/ClientApp/src/app/views/pages/dashboard/dashboard/dashboard.component.html
@@ -1,7 +1,28 @@
 <h1>Dashboard</h1>
+
 <div class="card">
-    <div class="card-head">Lorem ipsum - dashboard</div>
+    <div class="card-head">Trackers</div>
     <div class="card-body">
-        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quas ducimus soluta, quasi aut ipsa non, ullam enim rem repudiandae, vitae provident animi. Inventore rerum, voluptas optio dignissimos blanditiis modi illo!
+        <div class="half-width">
+            <div class="chart-section">
+                <p>Monsoon Records</p>
+                <app-donut-chart></app-donut-chart>
+            </div>
+        </div>
+        <div class="half-width">
+            <div class="chart-section">
+                <p>Elephant's Birth</p>
+                <app-line-chart></app-line-chart>
+            </div>
+        </div>
     </div>
 </div>
+<div class="card">
+    <div class="card-head">Trackers</div>
+    <div class="card-body">
+        
+    </div>
+</div>
+
+
+
