--- a/Web Application/ELPS/ELPS.Api/ClientApp/src/app/views/pages/dashboard/dashboard/dashboard.component.html
+++ b/Web Application/ELPS/ELPS.Api/ClientApp/src/app/views/pages/dashboard/dashboard/dashboard.component.html
@@ -1,7 +1,7 @@
-<h1>Dashboard</h1>
+<h2>Welcome to Wild Office System</h2>
 
 <div class="card">
-    <div class="card-head">Trackers</div>
+    <div class="card-head">Dashboard</div>
     <div class="card-body">
         <div class="half-width">
             <div class="chart-section">
