--- a/Web Application/ELPS/ELPS.Api/ClientApp/src/app/views/pages/dashboard/wild-officers/wild-officers.component.html
+++ b/Web Application/ELPS/ELPS.Api/ClientApp/src/app/views/pages/dashboard/wild-officers/wild-officers.component.html
@@ -2,6 +2,7 @@
 <div class="card">
     <div class="card-head">Wild Officers</div>
     <div class="card-body">
+        <h6>This Device Can't Open Tables</h6>
         <table style="width: 100%;border-width: thin;" >
             <th style="border-width: thin;font-size: 12px;" class="text-center">Email</th>
             <th style="border-width: thin;font-size: 12px;" class="text-center">First Name</th>
