--- a/Web Application/ELPS/ELPS.Api/ClientApp/src/app/views/pages/dashboard/dashboard/dashboard.component.css
+++ b/Web Application/ELPS/ELPS.Api/ClientApp/src/app/views/pages/dashboard/dashboard/dashboard.component.css
@@ -23,3 +23,51 @@
     margin-bottom: 5px;
     font-size: 20px;
 }
+
+table {
+    width: 100%;
+    border-collapse: collapse;
+    border: thin solid #ddd;
+}
+
+th, td {
+    border: thin solid #ddd;
+    font-size: 12px;
+    text-align: center;
+    padding: 8px;
+    word-wrap: break-word;
+}
+
+th {
+    background-color: #f2f2f2;
+}
+
+tr:hover {
+    background-color: #f5f5f5;
+}
+@media screen and (max-width: 820px) {
+    table {
+        display: none;
+    }
+}
+
+@media screen and (min-width: 820px) {
+    h6 {
+        display: none;
+    }
+}
+
+@media screen and (max-width: 1300px) {
+    .chart-section {
+        display: inline-block;
+    }
+    .card-body{
+        display: inline-block;
+    }
+    .half-width{
+        display: inline-block;
+    }
+    .card{
+        display: inline-block;
+    }
+}
