--- a/Web Application/ELPS/ELPS.Api/ClientApp/src/app/views/pages/dashboard/elephant-records/elephant-records.component.css
+++ b/Web Application/ELPS/ELPS.Api/ClientApp/src/app/views/pages/dashboard/elephant-records/elephant-records.component.css
@@ -21,3 +21,19 @@ th {
 tr:hover {
     background-color: #f5f5f5;
 }
+@media screen and (max-width: 820px) {
+    table {
+        display: none;
+    }
+    #webSubmitBtn {
+        display: none;
+    }
+    #webCheckBtn {
+        display: none;
+    }
+}
+@media screen and (min-width: 820px) {
+    #mobileBtn {
+        display: none;
+    }
+}
