--- a/Web Application/ELPS/ELPS.Api/ClientApp/src/app/views/pages/dashboard/elephant-register/elephant-register.component.html
+++ b/Web Application/ELPS/ELPS.Api/ClientApp/src/app/views/pages/dashboard/elephant-register/elephant-register.component.html
@@ -49,16 +49,35 @@
             <button type="submit" [disabled]="registerForm.invalid" style="float: right; margin-right: 5px; color: white; font-size: 13px; font-weight: 600;" class="btn btn-success pull-right">
                 Submit
             </button>
-            <button type="button" [disabled]="!registerForm.get('name')?.value" (click)="search()" style="float: left; margin-right: 5px; color: white; font-size: 13px; font-weight: 600;" class="btn btn-dark">
+            <button type="button" [disabled]="!registerForm.get('name')?.value" (click)="search()" id="webSearchBtn" style="float: left; margin-right: 5px; color: white; font-size: 13px; font-weight: 600;" class="btn btn-dark">
                 Search
             </button>
-            <button type="button" [disabled]="registerForm.invalid" (click)="editElephant()" style="float: left; margin-right: 5px; color: white; font-size: 13px; font-weight: 600;" class="btn btn-dark">
+            <button type="button" [disabled]="registerForm.invalid" (click)="editElephant()" id="webEditBtn" style="float: left; margin-right: 5px; color: white; font-size: 13px; font-weight: 600;" class="btn btn-dark">
                 Edit
             </button>
-            <button type="button" [disabled]="registerForm.invalid" (click)="deleteElephant()" style="float: left; margin-right: 5px; color: white; font-size: 13px; font-weight: 600;" class="btn btn-dark">
+            <button type="button" [disabled]="registerForm.invalid" (click)="deleteElephant()" id="webDelBtn" style="float: left; margin-right: 5px; color: white; font-size: 13px; font-weight: 600;" class="btn btn-dark">
                 Delete
             </button>
         </form>
+    </div>
+</div>
+
+<div class="card">
+    <div class="card-head">Officers List</div>
+    <div class="card-body">
+        <h6>This Device Can't Open Tables</h6>
+        <table style="width: 100%;border-width: thin;" >
+            <th style="border-width: thin;font-size: 12px;" class="text-center">Elephant Name</th>
+            <th style="border-width: thin;font-size: 12px;" class="text-center">Date of Birth</th>
+            <th style="border-width: thin;font-size: 12px;" class="text-center">Birth Location</th>
+            <th style="border-width: thin;font-size: 12px;" class="text-center">Remark</th>
+            <tr *ngFor="let register of registers">
+              <td style="border-width: thin;word-wrap: break-word; font-size: 12px;">{{register.name}}</td>
+              <td style="border-width: thin;word-wrap: break-word; font-size: 12px;">{{register.dob}}</td>
+              <td style="border-width: thin;word-wrap: break-word; font-size: 12px;">{{register.location}}</td>
+              <td style="border-width: thin;word-wrap: break-word; font-size: 12px;">{{register.remark}}</td>
+            </tr>
+        </table>
     </div>
 </div>
 
