--- a/Web Application/ELPS/ELPS.Api/ClientApp/src/app/views/pages/dashboard/view-er/view-er.component.html
+++ b/Web Application/ELPS/ELPS.Api/ClientApp/src/app/views/pages/dashboard/view-er/view-er.component.html
@@ -2,6 +2,7 @@
 <div class="card">
     <div class="card-head">Registered Elephants</div>
     <div class="card-body">
+        <h6>This Device Can't Open Tables</h6>
         <table style="width: 100%;border-width: thin;" >
             <th style="border-width: thin;font-size: 12px;" class="text-center">Elephant Name</th>
             <th style="border-width: thin;font-size: 12px;" class="text-center">Date of Birth</th>
