System Fully Completed

--- a/Web Application/ELPS/ELPS.Api/ClientApp/src/app/views/pages/dashboard/elephant-register/elephant-register.component.html
+++ b/Web Application/ELPS/ELPS.Api/ClientApp/src/app/views/pages/dashboard/elephant-register/elephant-register.component.html
@@ -63,7 +63,7 @@
 </div>
 
 <div class="card">
-    <div class="card-head">Officers List</div>
+    <div class="card-head">Registered Elephants List</div>
     <div class="card-body">
         <h6>This Device Can't Open Tables</h6>
         <table style="width: 100%;border-width: thin;" >
