--- a/Web Application/ELPS/ELPS.Api/ClientApp/src/app/views/pages/register/register.component.html
+++ b/Web Application/ELPS/ELPS.Api/ClientApp/src/app/views/pages/register/register.component.html
@@ -127,7 +127,10 @@
     <div class="row">
         <div class="col-6 offset-3">
             <div class="d-grid">
-                <button type="submit" [disabled]="registerForm.invalid" class="btn btn-dark">Submit</button>
+                <button type="submit" [disabled]="loading || registerForm.invalid" class="btn btn-dark">
+                    <span *ngIf="loading" class="spinner-border spinner-border-sm" role="status" aria-hidden="true"></span>
+                    {{ loading ? 'Logging in...' : 'Submit' }}
+                </button>
             </div>
         </div>
     </div>
